# history-graph-protocol

./: .gitignore  CLAUDE.md  HGP_Master_Plan.md  HGP_Technical_Design.md  LICENSE  README.md  SECURITY.md  conversation_export.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre_bash_hgp.py  pre_tool_use_hgp.py
.gemini/: settings.json
.gemini/hooks/: post_bash_hgp.py  pre_bash_hgp.py
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  architecture.md  hgp-codex-hook-e2e-test.md  hgp-gemini-hook-e2e-test.md  tools-reference.md  usage-patterns.md
docs/benchmarks/: 2026-04-08-verbose-response-token-overhead.md
docs/plans/: 2026-03-02-hgp-v1-implementation.md  2026-03-06-v2-memory-tier.md  2026-03-19-v3-evidence-trail.md  2026-03-22-v3-evidence-trail.md  2026-03-25-documentation.md  2026-04-01-v4-file-tracking.md  2026-04-02-v4-file-tracking-remediation.md  2026-04-03-full-audit-remediation-plan.md  2026-04-07-hgp-phase2-worktree-isolation-options.md  2026-04-07-hgp-storage-topology-recommendation.md  2026-04-07-task42-repo-local-storage-plan.md
docs/reviews/: 2026-03-19-v2-main-merge-review.txt  2026-04-02-v4-file-tracking-review.md
src/hgp/: __init__.py  cas.py  dag.py  db.py  errors.py  lease.py  models.py  project.py  reconciler.py  server.py
src/hgp/hooks/claude/: post_bash_hgp.py  pre_bash_hgp.py  pre_tool_use_hgp.py  subagent_start_hgp.py  subagent_stop_hgp.py
src/hgp/hooks/codex/: post_tool_use_hgp.py  pre_tool_use_hgp.py
src/hgp/hooks/gemini/: post_bash_hgp.py  post_tool_use_hgp.py  pre_bash_hgp.py  pre_tool_use_hgp.py
tests/: conftest.py  test_backup_restore.py  test_bash_hooks.py  test_cas.py  test_dag.py  test_db.py  test_file_ops.py  test_hook_policy.py  test_install.py  test_install_hooks.py  test_integration.py  test_lease.py  test_mode.py  test_models.py  test_package_init.py  test_project.py  test_reconciler.py  test_server_tools.py  test_subagent_hooks.py
