[project]
name = "history-graph-protocol"
version = "0.4.3"
description = "An MCP server that gives AI agents a permanent, append-only causal history"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "wgsim", email = "93395612+wgsim@users.noreply.github.com" }]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/wgsim/history-graph-protocol"
Repository = "https://github.com/wgsim/history-graph-protocol"
"Bug Tracker" = "https://github.com/wgsim/history-graph-protocol/issues"

[project.scripts]
hgp = "hgp.server:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hgp"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src/hgp"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
